--- a/letitsnow.css
+++ b/letitsnow.css
@@ -8,11 +8,11 @@
 }
 
 .let_it_snow.snow_type_1 {
-	background: transparent url(../images/snow1.png) center center no-repeat;
+	background: transparent url(https://1.bp.blogspot.com/-xDzzHGJRYdE/YJr74WEbyUI/AAAAAAAAI4U/SO9d7cNq3QQURq2mySpeihTY0uG6yH0BwCPcBGAsYHg/s0/Maple1.png) center center no-repeat;
 }
 
 .let_it_snow.snow_type_2 {
-	background: transparent url(../images/snow2.png) center center no-repeat;
+	background: transparent url(https://1.bp.blogspot.com/-A5fCl7jUJ5c/YJr74cYAuFI/AAAAAAAAI4U/uInXApDdXys0aZVcOJsFC13C8l-xUhG_wCPcBGAsYHg/s0/Maple-2.png) center center no-repeat;
 }
 
 .let_it_snow.snow_duration_1 {
